# xbWishList

./: .gitignore  .result.swp  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfile  input  res  result  result_io
src/: client.rs  controller.rs  core.rs  game.rs  main.rs  repo.rs  service.rs  shared.rs  wishlist.rs
src/client/: availability.rs  catalog_response.rs  client_service.rs  input_dto.rs  localized_property.rs  market_property.rs  module.rs  product_property.rs  result.rs  service.rs  shared.rs  sku.rs  sku_availability.rs
src/client/input_dto/: availability.rs  catalog_response.rs  localized_property.rs  market_property.rs  product_property.rs  search_response.rs  sku.rs  sku_availability.rs
src/controller/: game_controller.rs  wishlist_controller.rs
src/controller/dto/: input.rs  output.rs
src/controller/dto/input/: add_to_wishlist.rs  create_wishlist.rs  get_game_info.rs  remove_from_wishlist.rs  update_wishlist_preference.rs
src/core/: game.rs  purchase_option.rs  service.rs  wishlist.rs
src/game/: controller.rs  game.rs  helpers.rs  property.rs  purchase_option.rs  repo.rs  service.rs  xbox_api_client.rs
src/game/controller/: dto.rs  game_controller.rs
src/game/helpers/: uri.rs
src/game/repo/: game_model.rs  game_repo.rs  purchase_option_repo.rs
src/game/service/: game_service.rs  purchase_option_service.rs
src/game/xbox_api_client/: client_service.rs  input_dto.rs  markets.rs
src/repo/: game_repo.rs  models.rs  purchase_option_repo.rs  shared.rs  wishlist_repo.rs
src/repo/models/: game_model.rs  wishlist_model.rs
src/service/: game_service.rs  helpers.rs  purchase_option_service.rs  wishlist_service.rs
src/service/helpers/: game_property_mapper.rs  uri.rs
src/shared/: repository.rs
src/wishlist/: controller.rs  models.rs  repo.rs  service.rs  wishlist.rs
src/wishlist/controller/: dto.rs  wishlist_controller.rs
src/wishlist/models/: wishlist_model.rs
src/wishlist/repo/: wishlist_repo.rs
src/wishlist/service/: wishlist_service.rs
(+20 files in other folders)
