[package]
name = "xbProject"
version = "0.1.0"
authors = ["allaeddine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
serde = {version = "1.0.123", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0.38"
#tokio-tls = "0.3.1"