[package]
name = "xb_wish_list"
version = "0.1.0"
authors = ["allaeddine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

serde_json = "1.0.64"
serde = {version = "1.0.123", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0.38"
mongodb = { version = "1.2.1", default-features = false, features = ["async-std-runtime"] }
#tokio-tls = "0.3.1"
async-trait = "0.1.50"
phf = { version = "0.9", features = ["macros"] }
futures = "0.1"
actix-web = "3"
actix-cors = "0.5.4"
regex = "1"