[package]
name = "xb_wish_list"
version = "0.1.0"
authors = ["allaeddine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
async-process = "1.6.0"
serde_json = "1.0.64"
serde = {version = "1.0.123", features = ["derive"] }
chrono = "0.4.24"
bson = { features = ["chrono-0_4"] }
anyhow = "1.0.38"
mongodb = { version = "2.4.0" }


async-trait = "0.1.68"
phf = { version = "0.11.0", features = ["macros"] }
futures = "0.3.21"
actix-web = "4.1.0"
actix-cors = "0.6.1"
regex = "1"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utoipa = { version = "3", features = ["actix_extras", "chrono"] }